--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ body{
     height: 85vh;
     margin: auto;
     margin-top: 60px;
-    background:url(/bg-image.jpg);
+    background:url(./bg-image.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
